# pywin32supervisor

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: python-publish.yml  tests-and-coverage.yml
pywin32supervisor/: supervisor.py
tests/: test_program.py  test_service.py  test_utils.py  test_xmlrpc.py
