[metadata]
name = pywin32supervisor
version = 0.0.1
description = Python win32 service similar to supervisor for Unix based systems.
long_description = file: README.rst
url = https://github.com/Artillence/pywin32supervisor
# license = BSD-3-Clause  

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
